--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -25,3 +25,18 @@
   padding: auto;
   margin: auto;
 }
+
+.box-shadow {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  border-radius: 10px;
+}
+
+.placeholder-div {
+  background-color:whitesmoke;
+  display: flex;
+  justify-content: center;
+  height: 30vh;
+  max-width: 800px !important;
+  text-align: center;
+  padding: 50px 0;
+}
