added new field to patient collection

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -69,7 +69,7 @@
 }
 
 .max-width {
-  max-width: 500px;
+  max-width: 600px;
 }
 
 #add-patient-submit {
@@ -89,4 +89,8 @@
 
 #admin-login-header {
   font-size: 5rem;
+}
+
+.background-color {
+  background-color: beige;
 }
